limited zoom capability

--- a/templates/home.html
+++ b/templates/home.html
@@ -14,6 +14,9 @@
         }
     </style>
     <script type="text/javascript">
+      collar_id = {{ collar_id }};
+      first_seen = "START: {{ first_seen }}";
+      last_seen = " STOP: {{ last_seen }}";
       data = {{ data }};
     </script>
 </head>
