modified to use relative ts, added bat and rssi vis

--- a/templates/home.html
+++ b/templates/home.html
@@ -15,8 +15,8 @@
     </style>
     <script type="text/javascript">
       collar_id = {{ collar_id }};
-      first_seen = "START: {{ first_seen }}";
-      last_seen = " STOP: {{ last_seen }}";
+      start_segment = "START: {{ start_segment }}";
+      stop_segment = " STOP: {{ stop_segment }}";
       data = {{ data }};
     </script>
 </head>
