added monit control

--- a/templates/home.html
+++ b/templates/home.html
@@ -15,6 +15,7 @@
     </style>
     <script type="text/javascript">
       collar_id = {{ collar_id }};
+      session = {{ session }};
       start_segment = "START: {{ start_segment }}";
       stop_segment = " STOP: {{ stop_segment }}";
       data = {{ data }};
